- convert deprecated URL code